--- a/docs/siren.css
+++ b/docs/siren.css
@@ -1,98 +1,1 @@
-* {
-    font-family: sans-serif;
-}
-
-html, body {
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    width: 100vw;
-    background-color: ghostwhite;
-}
-
-.wrapper {
-    min-height: 100vh;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 800px;
-    height: inherit;
-    padding: 20px 20px;
-}
-
-.input-field {
-    position: relative;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    padding-right: 10px;
-}
-
-.input-field > .input-label {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    background-color: ghostwhite;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 0.75rem;
-    transform: translateY(-50%);
-    color: #6200ee;
-}
-
-.input-field > .input {
-    border: none;
-    outline: none;
-    background-color: ghostwhite;
-    width: 100%;
-}
-
-.buttons-wrapper {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.button {
-    cursor: pointer;
-    font-weight: bolder;
-    display: block;
-    min-width: 64px;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    background-color: #6200ee;
-    color: white;
-    text-transform: uppercase;
-    border-radius: 3px;
-    border: none;
-    box-shadow: 1px 1px 3px grey, -1px 1px 3px grey;
-    outline: none;
-    font-size: 0.75rem;
-    text-align: center;
-}
-
-.button:first-child {
-    margin-right: 10px;
-}
-
-a.button {
-    display: inline-block;
-    text-decoration: none;
-    margin-bottom: 20px;
-}
-
-footer {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+*{font-family:sans-serif}body,html{padding:0;margin:0;width:100vw;background-color:#f8f8ff}.wrapper,body,html{min-height:100vh}.container{margin:0 auto;max-width:800px;height:inherit;padding:20px}.input-field{position:relative;border:1px solid #d3d3d3;border-radius:3px;padding:10px}.input-field>.input-label{position:absolute;top:0;left:5px;background-color:#f8f8ff;padding-left:5px;padding-right:5px;font-size:.75rem;transform:translateY(-50%);color:#6200ee}.input-field>.input{border:none;outline:none;background-color:#f8f8ff;width:100%}.buttons-wrapper{margin-top:10px;display:flex;flex-direction:row;justify-content:center}.button{cursor:pointer;font-weight:bolder;display:block;min-width:64px;padding:9px 16px;background-color:#6200ee;color:#fff;text-transform:uppercase;border-radius:3px;border:none;box-shadow:1px 1px 3px grey,-1px 1px 3px grey;outline:none;font-size:.75rem;text-align:center}.button:first-child{margin-right:10px}a.button{display:inline-block;text-decoration:none;margin-bottom:20px}footer{position:absolute;bottom:10px;width:100%;left:0;display:flex;flex-direction:row;justify-content:center}
